--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@base-ui/react": "1.1.0",
     "@hookform/resolvers": "5.2.2",
+    "@openrouter/sdk": "0.5.1",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-aspect-ratio": "1.1.8",
@@ -38,7 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
     "@supabase/ssr": "0.8.0",
-    "@supabase/supabase-js": "2.93.3",
+    "@supabase/supabase-js": "2.94.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
@@ -49,7 +50,7 @@
     "next": "16.1.6",
     "next-themes": "0.4.6",
     "radix-ui": "1.4.3",
-    "react": "19.2.3",
+    "react": "19.2.4",
     "react-day-picker": "9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "7.71.1",
@@ -61,15 +62,17 @@
     "zod": "4.3.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "4",
-    "@types/node": "20",
-    "@types/react": "19",
-    "@types/react-dom": "19",
-    "eslint": "9",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "25.2.0",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
+    "dotenv": "17.2.3",
+    "eslint": "9.39.2",
     "eslint-config-next": "16.1.6",
-    "supabase": "2.74.5",
-    "tailwindcss": "4",
+    "supabase": "2.75.1",
+    "tailwindcss": "4.1.18",
+    "tsx": "4.21.0",
     "tw-animate-css": "1.4.0",
-    "typescript": "5"
+    "typescript": "^5.9.3"
   }
 }
